Fix IsMouseEventFromTouch not handling non-client mouse events.

Split off from crrev.com/c/1048877. IsMouseEventFromTouch would always
return false for non-client mouse events even if they were from touch.
HWNDMessageHandler lets these fall through anyway so this change alone
does not fix any bugs (as far as I know).

Bug: 838870, 832291
Change-Id: I2fc58816b7586a3347fade9e8171362137a2cbf5
Reviewed-on: https://chromium-review.googlesource.com/1058548
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558565}
Former-commit-id: f99e202ce1f30e12b84d2138fc2d6cd1b32fee79